<resources>
    <string name="app_name">SCHOOL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="apply">Apply</string>
    <string name="contact">Contact</string>
    <string name="gallery">Gallery</string>
    <string name="blog">Blog</string>
    <string name="event">Event</string>
    <string name="st_john_secondary_school_wakiso">St.John Secondary School Wakiso</string>
    <string name="welcome_to">Welcome to</string>
    <string name="next">NEXT</string>
    <string name="your_welcome_to_st_john_secondary_school_wakiso_with_high_academic_standards_we_are_offer_both_arts_and_science_subjects_with_the_same_emphasis_but_finally_allowing_students_to_specialise_in_areas_of_their_interest_click_next_to_login_to_our_websites_thank_you">Your welcome to St.John Secondary School Wakiso with high academic standards . We are offer both arts and science subjects with the same emphasis but finally allowing students to specialise in areas of their interest. Click NEXT to login to our websites. THANK YOU</string>
    <string name="password" />
    <string name="password_string">Password</string>
    <string name="email">Email</string>
    <string name="log_in_text">LOG IN</string>
    <string name="i_don_t_have_an_acount">I don\'t have an acount?</string>
    <string name="sign_up">Sign up</string>
    <string name="st_john_ss">ST.JOHN SS</string>
    <string name="st_john">St.John ss</string>
    <string name="login">Login</string>
    <string name="register">REGISTER</string>
    <string name="password_stringText">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_ready">Login</string>
    <string name="loading">Loading</string>
    <string name="loading_string">Loading....</string>
    <string name="loading_strings">Loading....</string>
    <string name="image">Image</string>
    <string name="image_">Image</string>
    <string name="st_john_s_wakiso_ss">St.John\'s wakiso SS</string>
    <string name="welcome_to_">WELCOME TO</string>
    <string name="we_are_a_wholesomely_transforming_school">We are a Wholesomely Transforming school</string>
    <string name="get_started">GET STARTED</string>
    <string name="_welcome_">WELCOME TO</string>
    <string name="get_started_">GET STARTED</string>
    <string name="st_john_s_wakiso_ss__">St.John\'s Wakiso SS</string>
    <string name="click_here_for_more_info">Click here for more info</string>
    <string name="welcome_to_st_john_s_wakiso_ss">Welcome to St.John\'s Wakiso SS</string>
    <string name="we_are_a_wholesomely_transforming_school_">We are a wholesomely transforming school</string>
</resources>