<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/baseline_emoji_events_24"
            android:title="@string/event" />
        <item
            android:id="@+id/nav_blog"
            android:icon="@drawable/baseline_web_24"
            android:title="@string/blog" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/baseline_browse_gallery_24"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/baseline_contacts_24"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_apply"
            android:icon="@drawable/baseline_app_registration_24"
            android:title="@string/apply" />

    </group>
</menu>