<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/screenshot"
    tools:context=".Welcome">

    <ImageView
        android:id="@+id/log_image"
        android:layout_width="261dp"
        android:layout_height="211dp"
        android:src="@drawable/stjohnss"
        tools:layout_editor_absoluteX="150dp"
        tools:layout_editor_absoluteY="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/my_school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@drawable/green"
        android:text="@string/welcome_to_st_john_s_wakiso_ss"
        app:layout_constraintTop_toBottomOf="@id/log_image"
        android:layout_marginStart="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/school_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/we_are_a_wholesomely_transforming_school_"
        android:textColor="@drawable/green"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="350dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="602dp"
       app:layout_constraintTop_toBottomOf="@id/my_school"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/click_here_for_more_info"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:background="@drawable/white"
        tools:layout_editor_absoluteX="151dp"
        tools:layout_editor_absoluteY="698dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>

